# AOframework

./: .gitignore  CODEOWNERS  Makefile  README.md  pyproject.toml
framework/: __init__.py  config.py  constants.py  entry_point.py  enums.py
framework/base_test/: TestDataCreator.py  __init__.py  page.py  test_data_creator.py
framework/data/: test_data_creator.py
framework/page/: element_base.py  element_container.py  elements.py  locators.py  page_base.py  page_element.py  page_elements_container.py  waiter.py
framework/steps/: __init__.py  api.py  check.py  page.py  step.py
pages/: base_page.py  google_page.py  python_page.py
pages/google_results/: elements.py  page.py
pages/google_search/: elements.py  page.py
pages/python_documentation/: elements.py  page.py
pages/python_search/: elements.py  page.py
tests/: conftest.py  conftest_autouse.py  conftest_base.py
tests/api/: conftest.py  test_swagger_pet_store.py
tests/google/: test_google_page.py  test_python_page.py
tests/search/: test_google_page.py  test_python_page.py
tests/ui/: conftest.py  test_google_page.py  test_python_page.py
